<resources>
    <!-- APP -->
    <string name="app_name">Estublock</string>
    <string name="edit_msg">Enter a msg</string>
    <string name="button_send">Send</string>

    <!-- LOGIN & REGISTER-->
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="empty_name">!Necesitamos tú nombre para el registro!</string>
    <string name="empty_email">Email vacío</string>
    <string name="not_valid_email">Email no valido</string>
    <string name="password_missmatch">Las contraseñas no coinciden o estan vacías</string>
    <string name="error_user_not_found">Credenciales erróneas.</string>

    <!-- MENU -->
    <string name="mis_asignaturas">Asignaturas</string>
    <string name="crear_eventos">Crear Eventos</string>
    <string name="asistencia">Asistencia</string>
    <string name="escanear">Escanear QR</string>

    <!-- Suscripciones -->
    <string name="saveProceed">Guardando</string>
    <string name="add">Añadir</string>
    <string name="delete">Eliminar</string>

    <!-- Crear Temas -->
    <string name="texto_tipo_tema">¿Que tipo de tema es?</string>
    <string name="select_dia">DIA</string>
    <string name="select_hora">HORA</string>
    <string name="creditos">Creditos</string>
    <string name="default_creditos">0</string>
    <string name="boton_guardar">Guardar</string>
    <string name="hint_texto_descripcion">Escribe mas detalles del evento</string>
    <string name="hint_titulo_evento">Ponle un titulo al evento</string>

    <!-- Crear Temas -->
    <string name="qr">Codigo QR</string>

    <!-- Escanear QR -->
    <string name="escanear_qr_atras">Dejar de Escanear</string>

</resources>
