<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/titulo_tema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Tema"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/titulo_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_tema"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/layout_tipo_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_evento"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tipo_evento"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/texto_tipo_tema"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/seleccion_tipo_tema"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_alignBottom="@+id/tipo_evento"
            android:layout_toEndOf="@+id/tipo_evento"
            android:layout_toRightOf="@+id/tipo_evento" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_tipo_evento"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >


        <EditText
            android:id="@+id/in_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipo_evento" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/select_dia"
            android:id="@+id/btn_date"
            android:layout_alignBottom="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:layout_toEndOf="@+id/in_date" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_fecha"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >


        <EditText
            android:id="@+id/in_hora"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipo_evento" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/select_hora"
            android:id="@+id/btn_hour"
            android:layout_alignBottom="@+id/in_hora"
            android:layout_toRightOf="@+id/in_hora"
            android:layout_toEndOf="@+id/in_hora" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_creditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_hora"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >


        <TextView
            android:id="@+id/num_creditos"
            android:layout_width="0dp"
            android:text="@string/creditos"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tipo_evento" />

        <EditText
            android:id="@+id/numero_creditos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/creditos"
            android:layout_alignBottom="@+id/num_creditos"
            android:layout_toRightOf="@+id/num_creditos"
            android:layout_toEndOf="@+id/num_creditos" />

    </LinearLayout>

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_creditos"
        android:text="@string/texto_descripcion"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button_guardar_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"
        android:text="@string/boton_guardar" />
</RelativeLayout>
